Kubernetes/k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: nginx
          image: Kubernetes/nginx:v1.0.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: php-socket
              mountPath: "/var/run"
            - name: documentroot
              mountPath: "/var/www/dev-k8s.techbull.cloud"
        - name: app
          image: app:v1.0.0
          volumeMounts:
            - name: php-socket
              mountPath: "/var/run"

      volumes:
        - name: php-socket
          emptyDir: {}
        - name: documentroot
          emptyDir: {}
