Kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ingressClassName: nginx
  rules:
    - host: dev-k8s.techbull.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: wordpress

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
  selector:
    app: mysql
  clusterIP: None
